--- a/config-repo/config-client-dev.yml
+++ b/config-repo/config-client-dev.yml
@@ -1,4 +1,5 @@
 server:
   port: 9401
 
-foo: foo from git repository by config-server
+#foo: foo from git repository by config-server
+foo: foo version 1 from git repository by config-server
